[package]
name = "rust-vpn"
version = "0.1.0"
edition = "2021"
authors = ["Wu Shilin <wushilin.sg@gmail.com>"]
description = "A simple Point To Point VPN in Rust"
license = "MIT"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name="client"
path = "src/client.rs"


[[bin]]
name="server"
path = "src/server.rs"

[[bin]]
name="tcpserver"
path = "src/tcpserver.rs"

[[bin]]
name="tcpclient"
path = "src/tcpclient.rs"

[build-dependencies]
chrono = "0.4"
hostname = "0.3"

[dependencies]
# Example dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
# TUN interface support
tun-rs = {version="2", features = ["async_tokio"]}
futures = "0.3"
# Command line argument parsing
clap = { version = "4", features = ["derive"] }
# Async trait support
async-trait = "0.1"
# JSON serialization
serde_json = "1"
# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }
# Random number generation
rand = "0.9"
quinn = "0.11.9"
bytes = "1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
tokio-rustls = "0.26"
x509-parser = "0.18"

tokio-tree-context = "0.1.6"
tokio-util = { version = "0.7.17", features = ["io"] }
net-route = "0.4.6"
chrono = "0.4"
humansize = "2.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
num-format = "0.4.4"
